--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EXRYWGMPE7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-EXRYWGMPE7');
+    </script>
     <title>Smart Bookmark API</title>
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
 </head>
