fix: homepage for small screens

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,6 +11,7 @@
 
         gtag('config', 'G-EXRYWGMPE7');
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Smart Bookmark API</title>
     <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
 </head>
