feat: other links added

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,6 +20,8 @@
     <h1>Smart Bookmark API</h1>
     <small>Status: <small class="inner-small">Online</small></small>
     <p><a href="/docs">Documentation</a></p>
+    <p><a href="https://github.com/iamyajat/Smart-Bookmark-API/" target="_blank">GitHub</a></p>
+    <p>Made with 💙 by <a href="https://iamyajat.co" target="_blank">Yajat Malhotra</a></p>
 </body>
 
 </html>
