--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -163,7 +163,7 @@
                     </div>
                 </a>
             </div>
-            <div class="name">Made With <span>&hearts;</span> By <span class="blue">Yajat Malhotra</span></div>
+            <div class="name">Made With <span>💙</span> By <span class="blue">Yajat Malhotra</span></div>
         </div>
     </div>
 </body>
