fix: issues #12 and #13

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="heading">
             <div class="title">
-                <h1>Smart Bookmark API</h1>
+                <h1>HypeLinks API</h1>
             </div>
             <div class="doc-btn">
                 <a href="/docs/">Documentation</a>
@@ -37,7 +37,7 @@
                             <p>POST</p>
                         </div>
                         <div class="asd">
-                            <p>http://127.0.0.1:8000/url</p>
+                            <p>http://127.0.0.1:8000/classify/url</p>
                         </div>
                         <div class="zxc">
                             <p>STATUS : <span>OK</span></p>
@@ -45,10 +45,10 @@
                     </div>
                     <div class="two">
                         <p>{</p>
-                            &nbsp;&nbsp;-url : 'http://www.food.com/',<br>
-                            &nbsp;&nbsp;-title : 'Some Title',<br>
-                            &nbsp;&nbsp;-category : 'Food Website',<br>
-                            &emsp;&emsp;category_id : 'edwsbesiubeiwufwee9542349t84hgwerhgwer9'
+                            &nbsp;&nbsp;"url": "https://www.food.com/ideas/italian-food-recipes-at-home-6828",<br>
+                            &nbsp;&nbsp;"title": "Best Italian Food Recipes - Food.com",<br>
+                            &nbsp;&nbsp;"category": "Food & Recipes",<br>
+                            &nbsp;&nbsp;"category_id": 4
                         <p>}</p>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                             <p>POST</p>
                         </div>
                         <div class="asd">
-                            <p>http://127.0.0.1:8000/url</p>
+                            <p>http://127.0.0.1:8000/classify/url</p>
                         </div>
                         <div class="zxc">
                             <p>STATUS : <span>OK</span></p>
@@ -66,10 +66,10 @@
                     </div>
                     <div class="two">
                         <p>{</p>
-                            &nbsp;&nbsp;-url : 'http://www.food.com/',<br>
-                            &nbsp;&nbsp;-title : 'Some Title',<br>
-                            &nbsp;&nbsp;-category : 'Food Website',<br>
-                            &emsp;&emsp;category_id : 'edwsbesiubeiwufwee9542349t84hgwerhgwer9'
+                            &nbsp;&nbsp;"url": "https://sambadenglish.com/did-venus-ever-have-oceans-heres-what-study-suggests/",<br>
+                            &nbsp;&nbsp;"title": "Did Venus ever have oceans? Here’s what study suggests | Sambad English",<br>
+                            &nbsp;&nbsp;"category": "Science & Technology",<br>
+                            &nbsp;&nbsp;"category_id": 1
                         <p>}</p>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                             <p>POST</p>
                         </div>
                         <div class="asd">
-                            <p>http://127.0.0.1:8000/url</p>
+                            <p>http://127.0.0.1:8000/classify/text</p>
                         </div>
                         <div class="zxc">
                             <p>STATUS : <span>OK</span></p>
@@ -89,10 +89,9 @@
                     </div>
                     <div class="two">
                         <p>{</p>
-                            &nbsp;&nbsp;-url : 'http://www.food.com/',<br>
-                            &nbsp;&nbsp;-title : 'Some Title',<br>
-                            &nbsp;&nbsp;-category : 'Food Website',<br>
-                            &emsp;&emsp;category_id : 'edwsbesiubeiwufwee9542349t84hgwerhgwer9'
+                            &nbsp;&nbsp;"title": "M1 MacBook is the best MacBook ever!"",<br>
+                            &nbsp;&nbsp;"category": "Science & Technology",<br>
+                            &nbsp;&nbsp;"category_id": 1
                         <p>}</p>
                     </div>
                 </div>
@@ -102,7 +101,7 @@
                             <p>POST</p>
                         </div>
                         <div class="asd">
-                            <p>http://127.0.0.1:8000/url</p>
+                            <p>http://127.0.0.1:8000/classify/text</p>
                         </div>
                         <div class="zxc">
                             <p>STATUS : <span>OK</span></p>
@@ -110,10 +109,9 @@
                     </div>
                     <div class="two">
                         <p>{</p>
-                            &nbsp;&nbsp;-url : 'http://www.food.com/',<br>
-                            &nbsp;&nbsp;-title : 'Some Title',<br>
-                            &nbsp;&nbsp;-category : 'Food Website',<br>
-                            &emsp;&emsp;category_id : 'edwsbesiubeiwufwee9542349t84hgwerhgwer9'
+                            &nbsp;&nbsp;"title": "Adele's 'Easy On Me' Breaks BTS' Spotify Record",<br>
+                            &nbsp;&nbsp;"category": "Entertainment",<br>
+                            &nbsp;&nbsp;"category_id": 9
                         <p>}</p>
                     </div>
                 </div>
@@ -122,15 +120,7 @@
 
         <div class="footer">
             <div class="wrapper">
-                <a href="https://github.com/iamyajat" target="_blank">
-                    <div class="button">
-                        <div class="icon">
-                           <i class="fab fa-facebook-f"></i>
-                        </div>
-                        <span>Facebook</span>
-                    </div>
-                </a>
-                <a href="https://github.com/iamyajat" target="_blank">
+                <a href="https://twitter.com/iamyajat" target="_blank">
                     <div class="button">
                         <div class="icon">
                            <i class="fab fa-twitter"></i>
@@ -141,20 +131,12 @@
                 <a href="https://github.com/iamyajat" target="_blank">
                     <div class="button">
                         <div class="icon">
-                           <i class="fab fa-instagram"></i>
-                        </div>
-                        <span>Instagram</span>
-                    </div>
-                </a>
-                <a href="https://github.com/iamyajat" target="_blank">
-                    <div class="button">
-                        <div class="icon">
                            <i class="fab fa-github"></i>
                         </div>
                         <span>Github</span>
                     </div>
                 </a>
-                <a href="https://github.com/iamyajat" target="_blank">
+                <a href="https://linkedin.com/in/iamyajat" target="_blank">
                     <div class="button">
                         <div class="icon">
                            <i class="fab fa-linkedin"></i>
